Fix for BUG#10037 * Add 0.01 to cost of 'range'+'using index' scan to avoid optimizer choice races with   'index' scan.

mysql-test/r/range.result:
  Update the test result after the changed cost
sql/opt_range.cc:
  Fix for BUG#10037
  * Add 0.01 to cost of 'range'+'using index' scan to avoid optimizer choice races with 
    'index' scan.
  * make QUICK_GROUP_MIN_MAX_SELECT handle the case where the source table is empty.